[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "campusjarvis-data-clean"
version = "0.1.0"
description = "Standalone data cleaning and school_event_table ingest app for Campus Jarvis."
requires-python = ">=3.11"

[project.scripts]
campus-data-clean = "data_clean.cli:main"

[tool.setuptools.packages.find]
include = ["data_clean*"]
